# AVS-Android-Antivirus-Solution-

./: README.md  settings.gradle
app/: build.gradle
app/assets/: keystore.bks
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  customguard.c  customguard.h  dhcp.c  dns.c  icmp.c  ip.c  pcap.c  session.c  tcp.c  udp.c  util.c
app/src/main/res/anim/: scale.xml
app/src/main/res/drawable/: circle_button_pink.xml  circle_button_red.xml  cpb_1.xml  down_arrow.xml  ic_arrow.xml  ic_datamonitor.xml  ic_deepscan.xml  ic_hide_folder.xml  ic_icons_settings.xml  ic_moreinfo.xml  ic_network_blocker.xml  ic_system_app.xml  ic_userapp.xml  left_bottom_button.xml  left_top_button.xml  list_indicator.xml  other_off_disabled.xml  other_on_disabled.xml  rectangle_button.xml  right_bottom_button.xml  right_top_button.xml  round_botton_green.xml  round_botton_red.xml  round_button_light_indigo.xml  rounded_button.xml  rounded_button_green.xml  rounded_button_yellow.xml  sw_thumb.xml  sw_track.xml  up_arrow.xml
app/src/main/res/drawable-v24/: progress_bar.xml
app/src/main/res/layout/: activity_boost.xml  activity_data_monitor.xml  activity_deep_scan.xml  activity_hidden_apps.xml  activity_main.xml  activity_network_setting.xml  activity_pass_code.xml  activity_pass_code_setting.xml  activity_setting.xml  activity_sign_in.xml  apps_list_layout.xml  basic_scan_result_child_layout.xml  basic_scan_result_parent_layout.xml  fragment_basic_scan_result.xml  fragment_home.xml  fragment_scan.xml  network_blocker_activity.xml  no_internet.xml  rule.xml  scanning_in_progress.xml  set_pin.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+69 files in other folders)
